[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.2.0", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.2.0", path = "../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",        # DelayUs
] }
embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl"
] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = [
    "defmt",
] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = [
    "defmt",
    "nightly",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger" }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

ssd1306 = "0.7.1"
embedded-graphics = "0.8"
# embedded-graphics = { path = "../embedded-graphics" }
embedded-hal = "0.2.7"
display-interface = "0.4.1"
heapless = "0.7.16"
display-interface-spi = "0.4.1"

epd = { path = "../epd" }

embedded-drivers = { version = "0.0.2", features = ["defmt"] }
embedded-hal-bus = "0.1.0-alpha.2"

[patch.crates-io]
# foo = { git = 'https://github.com/example/foo.git' }
# embedded-graphics = { path = "../embedded-graphics" }
embedded-drivers = { path = "../embedded-drivers" }

[profile.dev]
opt-level = "z" # Optimize for size.

[profile.release]
strip = false   # only binary is flashed to MCU
lto = true
opt-level = "z" # Optimize for size.
