[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.2.0", path = "../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.2.0", path = "../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",        # DelayUs
] }
embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = [
    "defmt",
] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = [
    "defmt",
    "nightly",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger" }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# ssd1306 = "0.7.1"
embedded-graphics = "0.8"
# embedded-graphics = { path = "../embedded-graphics" }
embedded-hal = "0.2.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.10" }

display-interface = "0.4.1"
heapless = "0.7.16"
display-interface-spi = "0.4.1"

epd = { path = "../epd" }

embedded-hal-bus = "0.1.0-alpha.2"
fixed = "1.23.1"
fixed-macro = "1.2"

st7565 = "0.1.6"
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
# embedded-drivers = { version = "0.0.2", features = ["defmt"] }

it7259 = { path = "../it7259", features = ["defmt"] }

memory-lcd-spi = { path = "../memory-lcd-spi", features = ["defmt"] }
micromath = "2.0.0"
mipidsi = "0.7.1"

pio-proc = "0.2"
pio = "0.2.1"

tinygif = { features = ["defmt"] }

ft6236 = { path = "../ft6236", features = ["defmt"] }
sitronix-touch = { path = "../sitronix-touch", features = ["defmt"] }
microfft = "0.5.1"

oled = { path = "../oled",features = ["defmt"]  }

[patch.crates-io]
# foo = { git = 'https://github.com/example/foo.git' }
# embedded-graphics = { path = "../embedded-graphics" }
# embedded-drivers = { path = "../embedded-drivers" }

# embedded-graphics-core = { path = "../embedded-graphics/core" }
st7565 = { path = "../st7565" }
mipidsi = { path = "../mipidsi" }

tinygif = { path = "../tinygif" }


[profile.dev]
opt-level = "z" # Optimize for size.

[profile.release]
strip = false   # only binary is flashed to MCU
lto = true
opt-level = "z" # Optimize for size.
